[gd_scene load_steps=11 format=3 uid="uid://blcggtwkxywh0"]

[ext_resource type="Script" path="res://scripts/cinematic/cinematic_scene.gd" id="1_mjim1"]
[ext_resource type="Texture2D" uid="uid://bmm0e7dvk0ebt" path="res://assets/sprites/spaceships/spaceship3.png" id="2_tyo7d"]
[ext_resource type="Script" path="res://scripts/cinematic/spaceship_prop.gd" id="3_uaahg"]
[ext_resource type="Texture2D" uid="uid://51y4bgl5enu6" path="res://assets/sprites/spaceships/spaceshipflame1.png" id="4_l4afc"]
[ext_resource type="Texture2D" uid="uid://bc2s43um7pixh" path="res://assets/sprites/spaceships/spaceshipflame2.png" id="5_s23k7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fyfio"]
radius = 33.0606

[sub_resource type="Curve" id="Curve_shodi"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.746781, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_bfft8"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.502146, 1), 0.0, 0.0, 0, 0, Vector2(0.854077, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="SpriteFrames" id="SpriteFrames_wcujh"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": ExtResource("4_l4afc")
}, {
"duration": 2.0,
"texture": ExtResource("5_s23k7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vkqpn"]
size = Vector2(21, 8)

[node name="CinematicScene" type="Node2D"]
position = Vector2(-28, 0)
script = ExtResource("1_mjim1")

[node name="Portal" type="Node2D" parent="."]
position = Vector2(28, 0)

[node name="Area2D" type="Area2D" parent="Portal"]
position = Vector2(-28, 0)
collision_layer = 4096
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal/Area2D"]
position = Vector2(28, 0)
shape = SubResource("CircleShape2D_fyfio")

[node name="CPUParticles2D" type="CPUParticles2D" parent="Portal"]
amount = 128
lifetime = 1.5
direction = Vector2(1, 1)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 10.0
orbit_velocity_min = 0.5
orbit_velocity_max = 0.5
radial_accel_min = 40.0
radial_accel_max = 40.0
scale_amount_min = 3.0
scale_amount_max = 3.0
scale_amount_curve = SubResource("Curve_shodi")
color = Color(0.14902, 0.788235, 0.74902, 1)

[node name="CPUParticles2D2" type="CPUParticles2D" parent="Portal"]
amount = 128
direction = Vector2(1, 1)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 20.0
orbit_velocity_min = 0.25
orbit_velocity_max = 0.25
scale_amount_min = 2.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_bfft8")
color = Color(0.670588, 0.14902, 0.788235, 1)

[node name="CPUParticles2D3" type="CPUParticles2D" parent="Portal"]
amount = 128
direction = Vector2(1, 1)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 20.0
orbit_velocity_min = 0.25
orbit_velocity_max = 0.25
scale_amount_min = 2.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_bfft8")
color = Color(0.835294, 0, 0, 1)

[node name="CPUParticles2D4" type="CPUParticles2D" parent="Portal"]
amount = 128
direction = Vector2(1, 1)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 20.0
orbit_velocity_min = 0.25
orbit_velocity_max = 0.25
scale_amount_min = 2.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_bfft8")
color = Color(0.835294, 0.262745, 0, 1)

[node name="SpaceshipProp" type="Sprite2D" parent="."]
position = Vector2(-271, 0)
texture = ExtResource("2_tyo7d")
script = ExtResource("3_uaahg")

[node name="FlameSprite" type="AnimatedSprite2D" parent="SpaceshipProp"]
position = Vector2(-24.5, 0)
sprite_frames = SubResource("SpriteFrames_wcujh")

[node name="Area2D" type="Area2D" parent="SpaceshipProp"]
collision_layer = 8192
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpaceshipProp/Area2D"]
position = Vector2(-5.5, 0)
shape = SubResource("RectangleShape2D_vkqpn")

[node name="FadeRect" type="ColorRect" parent="."]
visible = false
offset_left = -475.0
offset_top = -238.0
offset_right = 246.0
offset_bottom = 221.0
color = Color(0, 0, 0, 1)

[connection signal="area_entered" from="SpaceshipProp/Area2D" to="SpaceshipProp" method="_on_area_entered"]
